--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
     <p style="color: white; font-size: small;">Last synced 2 hrs ago</p>
     </div> 
   
-  <ion-card class="size" color="light">
+  <ion-card class="size" color="danger">
     <ion-card-content>
       <ion-row> 
         <ion-col size=8>
@@ -49,7 +49,7 @@
     <ion-col size=4>
       <ion-label>
 
-        <div id="piechart" #pieChart style="width: 80px; height: 80px; color: orangered;"></div>
+        <div id="piechart" #pieChart style="width: 80px; height: 80px; color: orangered;"> </div>
 
         <!-- <div id="piechart" #pieChart style="width: 450px; height: 300px;"></div> -->
 
