chart background color issue fixed

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,3 +14,56 @@ ion-progress-bar.style{
      color: blue;
      
 }
+
+ion-text.a{    
+     margin-left: 2em;
+}
+
+div.a1{
+     margin-top: 2em;
+}
+
+div.b{
+     margin-top: -0.8sem;;
+}
+
+div.a{
+     padding-top: 15px; color: white; font-weight: bolder;
+}
+
+ion-text.font{
+     font-size: x-large; font-weight: bold;
+}
+
+ion-text.bold{
+     font-weight: bold;
+}
+
+p.text{
+     color: white; font-size: small;
+}
+
+div.piechart{
+     width: 90px; height: 75px;
+}
+ion-icon.a{
+     color: darkblue; font-size:20px;
+}
+ion-icon.b{
+     color: red; font-size:20px;
+}
+
+ion-text.large{
+     font-size: x-large;
+}
+
+ion-icon.active{
+     font-size: x-small; color: seagreen;
+}
+
+ion-icon.rest{
+     font-size: x-small; color: red;
+}
+ion-text.small{
+     font-size: small;
+}
